Bevel Modifier - Crash on changing Miter type. #61427

Closed
opened 2019-02-11 20:44:07 +01:00 by Benjamin Sauder · 8 comments

System Information
Operating system: Win 10
Graphics card: GTX 970

Blender Version
blender-2.80-69b2f5268114-win64

Short description of error
Blender exits when trying to change the bevel miter type from arc to patch.

Exact steps for others to reproduce the error

  1. open attached blend file
    crash_bevel_mod.blend

  2. select plane object

  3. change outer miter type to patch

**System Information** Operating system: Win 10 Graphics card: GTX 970 **Blender Version** blender-2.80-69b2f5268114-win64 **Short description of error** Blender exits when trying to change the bevel miter type from arc to patch. **Exact steps for others to reproduce the error** 1. open attached blend file [crash_bevel_mod.blend](https://archive.blender.org/developer/F6581793/crash_bevel_mod.blend) 2. select plane object 3. change outer miter type to patch

Added subscriber: @kioku

Added subscriber: @kioku

#61495 was marked as duplicate of this issue

#61495 was marked as duplicate of this issue
Member

Added subscribers: @howardt, @lichtwerk

Added subscribers: @howardt, @lichtwerk
Howard Trickey was assigned by Philipp Oeser 2019-02-12 09:27:22 +01:00
Member

Can confirm.
Getting an assert in Eigen:

/blender/extern/Eigen3/Eigen/src/SparseCore/SparseMatrix.h:955: void Eigen::internal::set_from_triplets(const InputIterator&, const InputIterator&, SparseMatrixType&, int) [with InputIterator = __gnu_cxx::__normal_iterator<Eigen::Triplet*, std::vector<Eigen::Triplet > >; SparseMatrixType = Eigen::SparseMatrix<double, 0>]: Assertion it->row()>=0 && it->row()<mat.rows() && it->col()>=0 && it->col()<mat.cols()' failed.

1   raise                                                  0x7ffff466953f 
2   abort                                                  0x7ffff4653895 
3   __assert_fail_base.cold.0                0x7ffff4653769 
4   __assert_fail                                     0x7ffff46619f6 
5   Eigen::internal::set_from_triplets<__gnu_cxx::__normal_iterator<Eigen::Triplet<double, int> *, std::vector<Eigen::Triplet<double, int>>>, Eigen::SparseMatrix<double, 0, int>>                            SparseMatrix.h   955  0x62f583d      
6   Eigen::SparseMatrix<double, 0, int>::setFromTriplets<__gnu_cxx::__normal_iterator<Eigen::Triplet<double, int> *, std::vector<Eigen::Triplet<double, int>>>>                                               SparseMatrix.h   1016 0x62f34d7      
7   EIG_linear_solver_solve                    linear_solver.cc 291  0x62ee590      
8   adjust_the_cycle_or_chain                bmesh_bevel.c    2758 0x26ac222      
9   adjust_offsets                                     bmesh_bevel.c    2880 0x26ac58a      
10  BM_mesh_bevel                               bmesh_bevel.c    6162 0x26c61e8      
11  applyModifier                                    MOD_bevel.c      188  0x2553ff3      
12  modwrap_applyModifier                modifier.c       830  0x2b613a6      
13  mesh_calc_modifiers                       DerivedMesh.c    1443 0x29ffae5      
14  mesh_build_data                                DerivedMesh.c    2033 0x2a01ed7      
15  makeDerivedMesh                           DerivedMesh.c    2149 0x2a02277      
16  BKE_object_handle_data_update  object_update.c  182  0x2b9d3ef      
17  BKE_object_eval_uber_data            object_update.c  355  0x2b9dcfc   

@howardt: mind having a look?

Can confirm. Getting an assert in Eigen: /blender/extern/Eigen3/Eigen/src/SparseCore/SparseMatrix.h:955: void Eigen::internal::set_from_triplets(const InputIterator&, const InputIterator&, SparseMatrixType&, int) [with InputIterator = __gnu_cxx::__normal_iterator<Eigen::Triplet<double>*, std::vector<Eigen::Triplet<double> > >; SparseMatrixType = Eigen::SparseMatrix<double, 0>]: Assertion `it->row()>=0 && it->row()<mat.rows() && it->col()>=0 && it->col()<mat.cols()' failed.` ``` 1 raise 0x7ffff466953f 2 abort 0x7ffff4653895 3 __assert_fail_base.cold.0 0x7ffff4653769 4 __assert_fail 0x7ffff46619f6 5 Eigen::internal::set_from_triplets<__gnu_cxx::__normal_iterator<Eigen::Triplet<double, int> *, std::vector<Eigen::Triplet<double, int>>>, Eigen::SparseMatrix<double, 0, int>> SparseMatrix.h 955 0x62f583d 6 Eigen::SparseMatrix<double, 0, int>::setFromTriplets<__gnu_cxx::__normal_iterator<Eigen::Triplet<double, int> *, std::vector<Eigen::Triplet<double, int>>>> SparseMatrix.h 1016 0x62f34d7 7 EIG_linear_solver_solve linear_solver.cc 291 0x62ee590 8 adjust_the_cycle_or_chain bmesh_bevel.c 2758 0x26ac222 9 adjust_offsets bmesh_bevel.c 2880 0x26ac58a 10 BM_mesh_bevel bmesh_bevel.c 6162 0x26c61e8 11 applyModifier MOD_bevel.c 188 0x2553ff3 12 modwrap_applyModifier modifier.c 830 0x2b613a6 13 mesh_calc_modifiers DerivedMesh.c 1443 0x29ffae5 14 mesh_build_data DerivedMesh.c 2033 0x2a01ed7 15 makeDerivedMesh DerivedMesh.c 2149 0x2a02277 16 BKE_object_handle_data_update object_update.c 182 0x2b9d3ef 17 BKE_object_eval_uber_data object_update.c 355 0x2b9dcfc ``` @howardt: mind having a look?
Member

I confirm this and will fix it. Thanks for the report.

I confirm this and will fix it. Thanks for the report.

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero

This issue was referenced by 5c432cd11b

This issue was referenced by 5c432cd11bc457996d9752edf2bb0408c420176e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61427
No description provided.